--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
