--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
+    "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
     "git": "^0.1.5",
     "install": "^0.13.0",
