--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
     "expo-image-picker": "^13.1.1",
+    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "git": "^0.1.5",
     "install": "^0.13.0",
@@ -29,6 +31,7 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
