--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "^6.3.2",
     "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -28,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.5.0",
