--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "^6.3.2",
-    "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
@@ -35,6 +34,7 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-masked-text": "^1.13.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.11.1",
